--- a/css/style-apr1.css
+++ b/css/style-apr1.css
@@ -1,4 +1,4 @@
-body {
+html,body {
   background-color: #FFFFFF;
   color: #FFFFFF;
 }
@@ -16,5 +16,11 @@ a:link {
 }
 a:hover {
   color: #6633ff;
+}
+.title-banner{
+    background-color:#FFFFFF;
+}
+.standout{
+    background-color:#FFFFFF;
 }
 
