--- a/css/style-new-year.css
+++ b/css/style-new-year.css
@@ -1,4 +1,4 @@
-body {
+html,body {
   background-color: #FFFFFF;
   color: #000000;
 }
@@ -14,3 +14,10 @@ a:hover {
   color: #005C8A;
 }
 
+.title-banner{
+    background-color:#b21628;
+    text-shadow:1px 1px 0px #6f271d;
+}
+.standout{
+    background-color:#fff8fd;
+}
