--- a/css/style-xmas.css
+++ b/css/style-xmas.css
@@ -1,4 +1,4 @@
-body {
+html,body {
   background-color: #FFFFFF;
   color: #004700;
 }
@@ -14,3 +14,10 @@ a:hover {
   color: #005C8A;
 }
 
+.title-banner{
+    background-color:#b20808;
+    text-shadow:1px 1px 0px #6f271d;
+}
+.standout{
+    background-color:#eafcf0;
+}
