--- a/css/basic.css
+++ b/css/basic.css
@@ -19,6 +19,9 @@ body{
 	padding-left: 30px;
 	padding-top: 10px;
     }
+    .fixed-float-nav{
+	left: 805px;
+    }
 }
 
 @media all and (max-width: 860px){
@@ -26,6 +29,9 @@ body{
 	padding-right: 3.5vw;
 	padding-left: 3.5vw;
 	padding-top: 10px;
+    }
+    .fixed-float-nav{
+	right: 3.5vw;
     }
 }
 
@@ -106,7 +112,84 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
     flex-flow: row wrap;
     
 }
+.flex-col{
+    display:flex;
+    flex-flow: column;
+}
 
 .flex-item{
+    /* bad naming */
     margin:5px 10px;
+}
+.align-right{
+    align-items:flex-end;
+}
+.align-center{
+    align-items:center;
+}
+.center-center{
+    align-items:center;
+    justify-content:center;
+}
+.fixed-float-nav{
+    position:fixed;
+    bottom:30px;
+    
+}
+
+.hidden{
+    display:none;
+}
+
+.overlay-container{
+    position:relative;
+}
+.overlay-item{
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+}
+.large-icon{
+    width:50px;
+    height:50px;
+}
+.submenu{
+    margin-bottom:5px;
+}
+    
+.menu .submenu{
+    visibility:hidden;
+}
+.menu:hover .submenu{
+    visibility:visible;
+}
+.menu .button2{
+    visibility:hidden;
+}
+.menu .button1{
+    opacity:.6;
+    visibility:visible;
+}
+.menu:hover .button1{
+    visibility:hidden;
+}
+.menu:hover .button2{
+    visibility:visible;
+}
+.menu-item{
+    background-color:rgba(249,249,249,.7);
+    padding:10px;
+    margin:5px 0px;
+    border-radius:7px;
+    border-width:1px;
+    border-style:solid;
+}
+
+.ui-button{
+    background-color:rgba(255,255,255,.6);
+    border-radius:7px;
+    border-width:1px;
+    border-style:solid;
 }
