--- a/css/basic.css
+++ b/css/basic.css
@@ -166,9 +166,9 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
     width:400%;
 }
     
-/* .menu> .submenu{ */
-/*     display:none; */
-/*  } */
+.menu> .submenu{
+    display:none;
+}
 .menu:hover> .submenu{
     display:block;
 }
