--- a/css/basic.css
+++ b/css/basic.css
@@ -209,3 +209,29 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
     flex:auto;
 }
 
+.grid-container{
+    display:grid;
+}
+
+.conference-schedule{
+    grid-template-columns:1fr 1fr 4fr;
+    grid-template-rows:auto;
+}
+
+.item-date{
+    grid-column:1/span 3 ;
+}
+.item-time{
+    grid-column:1/span 1;
+}
+.item-name{
+    grid-column:2/span 1;
+}
+.item-title{
+    grid-column:3/span 1;
+}
+.item-vertical-skip{
+    grid-column:1/span 3;
+    height:10px;
+}
+
