updated schedule. talked about Bing translation. changed some directories. fixed some typos.

--- a/css/basic.css
+++ b/css/basic.css
@@ -69,6 +69,10 @@ li.biblio { counter-increment: biblio;}
     suffix: "]  ";
 }
 
+img{
+    width:100%;
+}
+
 table { 
 	width:100%;
 	border-collapse: collapse;
